<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoreProduct">

    <Button
        android:id="@+id/addProductNavBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="20"
        android:text="@string/new_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectProductNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:text="@string/or_select_existing_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProductNavBtn" />

    <EditText
        android:id="@+id/addStoreProductInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_btn_style"
        android:drawableStart="@drawable/style_product_btn"
        android:drawablePadding="12dp"
        android:ems="15"
        android:hint="@string/product"
        android:inputType="text"
        android:padding="10dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectProductNav" />

    <EditText
        android:id="@+id/addStoreProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/custom_btn_style"
        android:hint="@string/item_price"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:ems="15"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/style_price_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoreProductInfo" />

    <TextView
        android:id="@+id/addStoreProductCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoreProductPrice" />

    <Button
        android:id="@+id/addProductToStoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginTop="10dp"
        android:text="@string/add_product_to_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoreProductCurrency" />

</androidx.constraintlayout.widget.ConstraintLayout>