<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStore">

    <EditText
        android:id="@+id/addShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="name"
        android:background="@drawable/custom_btn_style"
        android:drawableStart="@drawable/store_btn_style"
        android:drawablePadding="12dp"
        android:ems="15"
        android:hint="@string/store_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addShopLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:background="@drawable/custom_btn_style"
        android:hint="@string/shop_location_name"
        android:inputType="text"
        android:padding="10dp"
        android:ems="15"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/location_btn_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addShopName" />

    <Button
        android:id="@+id/addShopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/add_store"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addShopLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>