<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainFragment">

    <Button
        android:id="@+id/mainCompareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_stores"
        app:icon="@drawable/ic_compare_shops"
        app:iconGravity="top"
        app:iconSize="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/mainAddStoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_store"
        app:icon="@drawable/ic_add"
        app:iconGravity="start"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCompareBtn" />

    <TextView
        android:id="@+id/mainStoresList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_store_btn_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/available_stores"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainAddStoreBtn"
        app:drawableTopCompat="@drawable/ic_storefront_large" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMainStores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainStoresList"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mainNoItemInList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/no_available_store_to_show"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainStoresList" />




</androidx.constraintlayout.widget.ConstraintLayout>