<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProduct">

    <EditText
        android:id="@+id/addProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="name"
        android:background="@drawable/custom_btn_style"
        android:drawableStart="@drawable/style_product_btn"
        android:drawablePadding="12dp"
        android:ems="15"
        android:hint="@string/product_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addProductBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:background="@drawable/custom_btn_style"
        android:hint="@string/product_brand_name"
        android:inputType="text"
        android:padding="10dp"
        android:ems="15"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/style_brand_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProductName" />

    <Spinner
        android:id="@+id/addProductScaleType"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_btn_style"
        android:padding="10dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/addProductBrand"
        app:layout_constraintStart_toStartOf="@+id/addProductBrand"
        app:layout_constraintTop_toBottomOf="@+id/addProductBrand" />


    <EditText
        android:id="@+id/addProductScaleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:background="@drawable/custom_btn_style"
        android:hint="@string/scale_value"
        android:inputType="text"
        android:padding="10dp"
        android:ems="15"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/style_scale_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProductScaleType" />

    <Button
        android:id="@+id/addProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/add_shop"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProductScaleValue" />

</androidx.constraintlayout.widget.ConstraintLayout>