<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StoreItem">

    <Button
        android:id="@+id/storeAddProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_store_product"
        app:icon="@drawable/ic_add"
        app:iconGravity="start"
        app:iconSize="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/storeProductListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_store_btn_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/products_in_this_store"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeAddProductBtn"
        app:drawableTopCompat="@drawable/ic_storefront_large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStoresItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeProductListBtn" />

    <TextView
        android:id="@+id/storeItemsNoItemInList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/there_is_no_products_in_this_store"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvStoresItem" />


</androidx.constraintlayout.widget.ConstraintLayout>